--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "moment": "^2.29.4",
+    "ngx-toastr": "^16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
