--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "moment": "^2.29.4",
