--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,12 +20,22 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@fullcalendar/angular": "^6.1.7",
+    "@fullcalendar/core": "^6.1.7",
+    "@fullcalendar/daygrid": "^6.1.7",
+    "@fullcalendar/interaction": "^6.1.7",
+    "@fullcalendar/list": "^6.1.7",
+    "@fullcalendar/resource": "^6.1.7",
+    "@fullcalendar/resource-timegrid": "^6.1.7",
+    "@fullcalendar/resource-timeline": "^6.1.7",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "hammerjs": "^2.0.8",
+    "install": "^0.13.0",
     "moment": "^2.29.4",
     "ngx-toastr": "^16.1.0",
+    "npm": "^9.6.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -36,6 +46,7 @@
     "@angular/compiler-cli": "^15.2.0",
     "@types/cornerstone-core": "^2.3.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.16",
     "@types/node": "^20.1.2",
     "cornerstone": "^0.1.1",
     "cornerstone-core": "^2.6.1",
